[package]
name = "sbio"
version = "0.6.0"
license = "MIT"
description = "Rust wrapper around Crank Software's Storyboard IO (SBIO) C AP"
repository = "https://github.com/mattlove-net/sbio-sys"
readme = "README.md"
exclude = [
    "test/*",
]

[dependencies]
bitflags = "2.5.0"
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"]}
pkg-config = "0.3"
